@@ -1,11 +1,8 @@
 plugins {
-
     id 'com.android.application'
-
 }
 
 android {
-
     compileSdkVersion 34
     buildToolsVersion "30.0.3"
 
@@ -17,8 +14,19 @@ android {
         versionCode 20
         versionName "2.18"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
     }
+
+
+    tasks.withType(JavaCompile).configureEach{
+        options.fork = true
+        options.forkOptions.jvmArgs +=[
+                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
+    }
+
+
+
     buildFeatures{
         viewBinding=true
     }
@@ -35,7 +43,6 @@ android {
                 checkReleaseBuilds false
                 abortOnError false
             }
-
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable false
@@ -72,8 +79,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
     implementation 'com.github.smarteist:autoimageslider:1.3.9'
+
     //butterknife
     implementation 'com.jakewharton:butterknife:10.2.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
@@ -82,9 +89,11 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
    implementation 'com.squareup.picasso:picasso:2.71828'
 //    Image Uploading
-    implementation 'id.zelory:compressor:1.0.4'
+    implementation 'id.zelory:compressor:3.0.1'
    // implementation 'com.github.jrvansuita:PickImage:2.2.4'
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
+
+//    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
+//    implementation 'com.github.CanHub:Android-Image-Cropper:4.5.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
     implementation 'com.android.volley:volley:1.2.1'
     //app updater
@@ -92,11 +101,7 @@ dependencies {
     implementation 'com.scottyab:rootbeer-lib:0.1.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
     implementation 'com.github.smarteist:autoimageslider:1.3.9'
-
-        implementation 'com.itextpdf:itextpdf:5.5.13.2'
-
-
-
+    implementation 'com.itextpdf:itextpdf:5.5.13.2'
 
 
 }
